feat: add gallery
