# app/Models/Gallery.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Gallery extends Model
+{
+    //
+    protected $fillable = ['name', 'activity_date'];
+
+    public function images() {
+        return $this->hasMany(GalleryImage::class);
+    }
+}
